--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             display: grid;
             grid-template-columns: 3fr 380px;
             gap: 2rem;
-            max-width: 1400px;
+            max-width: 1600px;
             margin: 0 auto;
             padding: 0 2rem;
         }
@@ -611,7 +611,7 @@
                             <tr>
                                 <td><span class="week-number">1</span></td>
                                 <td><strong>Introduction to Applied Machine Learning</strong></td>
-                                <td><a href="#" target="_blank">Courseworks</a></td>
+                                <td><a href="materials/[Release] L1 - Introduction to Machine Learning.pdf" target="_blank">📖 Slides </a></td>
                             </tr>
                             <tr>
                                 <td><span class="week-number">2</span></td>
@@ -717,7 +717,7 @@
                     <h3>📢 Announcements</h3>
                     <div class="announcement new">
                         <div class="announcement-date">🆕 Sep 4, 2025</div>
-                        <p>Welcome to AML! First class Thursday 7PM.</p> 
+                        <p>Welcome to AML!<br> First class Thursday 7PM.</p>
                     </div>
                 </div>
 
@@ -744,9 +744,9 @@
                         </div>
                         <div class="date-item">
                             <span class="event">Midterm</span>
-                            <span class="date">&nbsp;&nbsp;&nbsp;Week 6</span>
-                            <span style="margin: 0 0.5rem;"></span>
                             <span class="date"></span>
+                            <span style="margin: 0 0.5rem;"></span>
+                            <span class="date">Week 6</span>
                         </div>
                         <div class="date-item">
                             <span class="event">Assignment 3</span>
@@ -768,10 +768,10 @@
                     <h3>📖 Resources</h3>
                     <h4>Required Textbooks</h4>
                     <ul style="margin-left: 1.2rem;">
-                        <li><strong>ESL:</strong> The Elements of Statistical Learning - Hastie et al.</li>
-                        <li><strong>DL:</strong> Deep Learning - Goodfellow et al.</li>
-                        <li><strong>RL:</strong> Reinforcement Learning: An Introduction - Sutton et al.</li>
-                        <li><strong>PML:</strong> Probabilistic Machine Learning - Murphy et al.</li>
+                        <li><strong>The Elements of Statistical Learning</strong> - Hastie et al. <a href="https://hastie.su.domains/ElemStatLearn/download.html" target="_blank">[PDF]</a></li>
+                        <li><strong>Deep Learning</strong> - Goodfellow et al. <a href="https://github.com/janishar/mit-deep-learning-book-pdf" target="_blank">[PDF]</a></li>
+                        <li><strong>Reinforcement Learning: An Introduction</strong> - Sutton et al. <a href="https://www.incompleteideas.net/book/bookdraft2018jan1.pdf" target="_blank">[PDF]</a></li>
+                        <li><strong>Probabilistic Machine Learning</strong> - Murphy et al. <a href="https://probml.github.io/pml-book/book1.html" target="_blank">[PDF]</a></li>
                     </ul>
                 </div>
 
@@ -786,7 +786,7 @@
                     <h3>🎓 Teaching Assistants</h3>
                     <ul class="ta-list">
                         <li>
-                            <div class="name">Case Schemmer</div>
+                            <div class="name">Case Hallowell Schemmer</div>
                             <a href="mailto:chs2164@columbia.edu" class="email">chs2164@columbia.edu</a>
                         </li>
                         <li>
@@ -811,6 +811,13 @@
                         </li>
                     </ul>
                 </div>
+                <!-- Office Hours -->
+                <div class="sidebar-card">
+                    <h3>🕐 Office Hours</h3>
+                    <p style="font-size: 0.9rem; color: var(--columbia-gray);">
+                        <strong> OH and recitations TBD soon.</strong><br>
+                        </p>
+                </div>
 
                 <!-- Quick Links -->
                 <div class="sidebar-card">
@@ -819,12 +826,6 @@
                         <a href="https://edstem.org/us/courses/86194" target="_blank">💬 Ed Discussion</a>
                         <a href="https://courseworks2.columbia.edu/courses/234147" target="_blank">📚 Courseworks</a>
                         <a href="https://huggingface.co/" target="_blank">🤗 Hugging Face</a>
-                        <a href="#" target="_blank">📝 Syllabus PDF</a>
+                        <a href="materials/[COMS4995W032 AML Fall25] Syllabus.pdf" target="_blank">📝 Syllabus</a>
                     </div>
                 </div>
-
-                <!-- Office Hours -->
-                <div class="sidebar-card">
-                    <h3>🕐 Office Hours</h3>
-                    <p style="font-size: 0.9rem; color: var(--columbia-gray);">
-                        <strong> OH and recitations TBD soon.</strong><br>
