Add the L2 link.

--- a/index.html
+++ b/index.html
@@ -611,12 +611,12 @@
                             <tr>
                                 <td><span class="week-number">1</span></td>
                                 <td><strong>Introduction to Applied Machine Learning</strong></td>
-                                <td><a href="materials/[Release] L1 - Introduction to Machine Learning.pdf" target="_blank">📖 Slides </a></td>
+                                <td><a href="materials/[RELEASE] L1 - Introduction to Machine Learning.pdf" target="_blank">📖 Slides </a></td>
                             </tr>
                             <tr>
                                 <td><span class="week-number">2</span></td>
                                 <td><strong>Data Preparation & Feature Engineering</strong></td>
-                                <td><a href="#" target="_blank"></a></td>
+                                <td><a href="materials/[RELEASE] L2 - Data.pdf" target="_blank">📖 Slides </a></td>
                             <tr>
                                 <td><span class="week-number">3</span></td>
                                 <td><strong>Generative vs. Discriminative Approaches: Naive Bayes & Linear Regression</strong></td>
