Add resources for Generative vs. Discriminative Approaches

--- a/index.html
+++ b/index.html
@@ -626,7 +626,15 @@
                             <tr>
                                 <td><span class="week-number">3</span></td>
                                 <td><strong>Generative vs. Discriminative Approaches: Naive Bayes & Linear Regression</strong></td>
-                                <td><a href="#" target="_blank"></a></td>
+                                 <td>
+                                    <a href="materials/[RELEASE] L3 - Generative vs. Discriminative Approaches.pdf" target="_blank">📖 Slides</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/1CkYEtcpliaX4HzoJIdzd8VYeHmgirqFq?usp=sharing" target="_blank">💻 Naive Bayes</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/1ldh8WK3cu7fqw4rF2CpCUSWLeHsXjd46?usp=sharing" target="_blank">💻 Linear Regression</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/1WZRD_eSPqVh7s4ihs5P9eUiERomqgx3L?usp=sharing" target="_blank">💻 Case Study</a>
+                                </td>
                             </tr>
                             <tr>
                                 <td><span class="week-number">4</span></td>
