--- a/index.html
+++ b/index.html
@@ -639,7 +639,12 @@
                             <tr>
                                 <td><span class="week-number">4</span></td>
                                 <td><strong>Model Evaluation & Bias-Variance</strong></td>
-                                <td><a href="#" target="_blank"></a></td>
+                                 <td>
+                                    <a href="materials/[RELEASE] L4 - Model Evaluation & Bias-Variance.pdf" target="_blank">📖 Slides</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/10x1H4wQY_nJuIQC5BCa6yZ_ry-YnqHO5?usp=sharing" target="_blank">💻 K-fold Cross Validation</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/1x5LPQOKrWwsrAHsujQLEymdA0BhYLNSj?usp=sharing" target="_blank">💻 Metrics</a>
                             </tr>
                             <tr>
                                 <td><span class="week-number">5</span></td>
