--- a/index.html
+++ b/index.html
@@ -602,9 +602,9 @@
                     <table class="schedule-table">
                         <thead>
                             <tr>
-                                <th width="10%">Week</th>
-                                <th width="60%">Topic</th>
-                                <th width="30%">Materials</th>
+                                <th width="5%">Week</th>
+                                <th width="70%">Topic</th>
+                                <th width="25%">Materials</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -649,6 +649,10 @@
                             <tr>
                                 <td><span class="week-number">5</span></td>
                                 <td><strong>Tree Models & Ensembles</strong></td>
+                                <td>
+                                    <a href="materials/[RELEASE] L5 - Tree Models & Ensembles.pdf" target="_blank">📖 Slides</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/1Ajm0FAz-dm3-0jDawe4AiS1rH9srbYM8?usp=sharing" target="_blank">💻 Decision Tree & XGBoost</a>
                             </tr>
                             <tr>
                                 <td><span class="week-number">6</span></td>
@@ -718,8 +722,8 @@
                     <h3>Late-work policy</h3>
                     <ul>
                         <li>Work submitted <b>24 hours or less</b> past the original due date & time will be accepted with <b>no penalty</b></li>
-                        <li>Work submitted <b>more than 24 hours</b> past the original due date & time will be accepted with a <b>10% penalty</b> for up to <b></b>72 hours</b> past the original due date & time</li>
-                        <li>Work will NOT be accepted <b>more than 72 hours</b> past the original due date & time</li>
+                        <li>Work submitted <b>more than 24 hours</b> past the original due date & time will be accepted with a <b>10% penalty</b> for up to <b></b>48 hours</b> past the original due date & time</li>
+                        <li>Work will NOT be accepted <b>more than 48 hours</b> past the original due date & time</li>
                     </ul>
                     <h3>Re-grade policy</h3>
                     <p>Students may request a re-grade <b> within 1 week</b> from the date the graded assignment is returned to students. If requesting a regrade, students should be prepared to make a compelling argument as to why the original grade needs to be reconsidered. The student should discuss the grade with the TA first before requesting instructor re-grade. The process for requesting an instructor re-grade is to email the instructor with the request within one week from the date the graded assignment is returned. The instructor and student will then decide on a mutually agreeable time and place to discuss the assignment</p>
@@ -872,7 +876,7 @@
                     <ul style="margin-left: 1.2rem;">
                         <li><strong>The Elements of Statistical Learning</strong> - Hastie et al. <a href="https://hastie.su.domains/ElemStatLearn/download.html" target="_blank">[PDF]</a></li>
                         <li><strong>Deep Learning</strong> - Goodfellow et al. <a href="https://github.com/janishar/mit-deep-learning-book-pdf" target="_blank">[PDF]</a></li>
-                        <li><strong>Reinforcement Learning: An Introduction</strong> - Sutton et al. <a href="https://www.incompleteideas.net/book/bookdraft2018jan1.pdf" target="_blank">[PDF]</a></li>
+                        <li><strong>Reinforcement Learning: An Introduction</strong> - Sutton et al. <a href="https://web.stanford.edu/class/psych209/Readings/SuttonBartoIPRLBook2ndEd.pdf" target="_blank">[PDF]</a></li>
                         <li><strong>Probabilistic Machine Learning</strong> - Murphy et al. <a href="https://probml.github.io/pml-book/book1.html" target="_blank">[PDF]</a></li>
                     </ul>
                 </div>
