--- a/index.html
+++ b/index.html
@@ -656,35 +656,35 @@
                             </tr>
                             <tr>
                                 <td><span class="week-number">6</span></td>
-                                <td><strong>Unsupervised Learning</strong></td>
+                                <td><strong>[No Lecture] Midterm Exam 💪</strong></td>
                             </tr>
                             <tr>
                                 <td><span class="week-number">7</span></td>
-                                <td><strong>Neural Networks Fundamentals</strong></td>
+                                <td><strong>Unsupervised Learning & Neural Networks Fundamentals</strong></td>  
                             </tr>
                             <tr>
                                 <td><span class="week-number">8</span></td>
-                                <td><strong>Convolutional Neural Networks</strong></td>
+                                <td><strong>Deep Learning Applications: CNNs & Transformers</strong></td>
                             </tr>
                             <tr>
                                 <td><span class="week-number">9</span></td>
-                                <td><strong>Basic Transformers</strong></td>
+                                <td><strong>Advanced Transformers: BERT, GPT & LLaMA</strong></td>
                             </tr>
                             <tr>
                                 <td><span class="week-number">10</span></td>
-                                <td><strong>Advanced Transformers: BERT, GPT & Gemini</strong></td>
+                                <td><strong>Pre-training & Fine-tuning Paradigm</strong></td>
                             </tr>
                             <tr>
                                 <td><span class="week-number">11</span></td>
-                                <td><strong>Pre-training & Supervised Fine-tuning</strong></td>
+                                <td><strong>Reinforcement Learning in Large Language Models</strong></td>
                             </tr>
                             <tr>
                                 <td><span class="week-number">12</span></td>
-                                <td><strong>Reinforcement Learning</strong></td>
+                                <td><strong>Agentic Workflows</strong></td>
                             </tr>
                             <tr>
                                 <td><span class="week-number">13</span></td>
-                                <td><strong>Agentic Workflows</strong></td>
+                                <td><strong>Final Review 🤖</strong></td>
                             </tr>
                         </tbody>
                     </table>
