--- a/index.html
+++ b/index.html
@@ -661,6 +661,12 @@
                             <tr>
                                 <td><span class="week-number">7</span></td>
                                 <td><strong>Unsupervised Learning & Neural Networks Fundamentals</strong></td>  
+                                <td>
+                                    <a href="materials/[RELEASE] L7 - Unsupervised Learning & Neural Networks Fundamentals.pdf" target="_blank">📖 Slides</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/1KE4Md2-falSIwzZk63cspCRbtp76IKPa?usp=sharing" target="_blank">💻 K-means Clustering</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/1iq6JyddKHK4q1y6mEVD5zfcKjbJmSaZ1?usp=sharing" target="_blank">💻 MLP w/ Pytorch</a>
                             </tr>
                             <tr>
                                 <td><span class="week-number">8</span></td>
@@ -721,9 +727,8 @@
                     <h2>📜 Policies</h2>
                     <h3>Late-work policy</h3>
                     <ul>
-                        <li>Work submitted <b>24 hours or less</b> past the original due date & time will be accepted with <b>no penalty</b></li>
-                        <li>Work submitted <b>more than 24 hours</b> past the original due date & time will be accepted with a <b>10% penalty</b> for up to <b></b>48 hours</b> past the original due date & time</li>
-                        <li>Work will NOT be accepted <b>more than 48 hours</b> past the original due date & time</li>
+                        <li>Work will be accepted with <b>a 10% penalty</b> for <b>up to 24 hours</b> past the original due date & time</li>
+                        <li>Work will NOT be accepted <b>more than 24 hours</b> past the original due date & time</li>
                     </ul>
                     <h3>Re-grade policy</h3>
                     <p>Students may request a re-grade <b> within 1 week</b> from the date the graded assignment is returned to students. If requesting a regrade, students should be prepared to make a compelling argument as to why the original grade needs to be reconsidered. The student should discuss the grade with the TA first before requesting instructor re-grade. The process for requesting an instructor re-grade is to email the instructor with the request within one week from the date the graded assignment is returned. The instructor and student will then decide on a mutually agreeable time and place to discuss the assignment</p>
@@ -761,9 +766,9 @@
                         </div>
                         <div class="date-item">
                             <span class="event">Assignment 2</span>
-                            <span class="date">Week 5</span>
+                            <span class="date">Week 6</span>
                             <span style="margin: 0 0.5rem;">/</span>
-                            <span class="date">Week 7</span>
+                            <span class="date">Week 8</span>
                         </div>
                         <div class="date-item">
                             <span class="event">Midterm</span>
