--- a/index.html
+++ b/index.html
@@ -670,11 +670,16 @@
                             </tr>
                             <tr>
                                 <td><span class="week-number">8</span></td>
-                                <td><strong>Deep Learning Applications: CNNs & Transformers</strong></td>
+                                <td><strong>Transformer</strong></td>
+                                <td>
+                                    <a href="materials/[RELEASE] L8 - Transformer.pdf" target="_blank">📖 Slides</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/1lsYBX2X_MeZtJOrI_CiUNCVRlVa9DzmK?usp=sharing" target="_blank">💻 Transformer w/ Pytorch</a>
+                                    <br>
                             </tr>
                             <tr>
                                 <td><span class="week-number">9</span></td>
-                                <td><strong>Advanced Transformers: BERT, GPT & LLaMA</strong></td>
+                                <td><strong>Advanced Transformer: BERT, GPT & LLaMA</strong></td>
                             </tr>
                             <tr>
                                 <td><span class="week-number">10</span></td>
