--- a/index.html
+++ b/index.html
@@ -679,7 +679,10 @@
                             </tr>
                             <tr>
                                 <td><span class="week-number">9</span></td>
-                                <td><strong>Advanced Transformer: BERT, GPT & LLaMA</strong></td>
+                                <td><strong>Transformer++</strong></td>
+                                <td>
+                                    <a href="materials/[RELEASE] L9 - Transformer++.pdf" target="_blank">📖 Slides</a>
+                                    <br>
                             </tr>
                             <tr>
                                 <td><span class="week-number">10</span></td>
