--- a/index.html
+++ b/index.html
@@ -681,6 +681,8 @@
                                 <td><span class="week-number">9</span></td>
                                 <td><strong>Transformer++</strong></td>
                                 <td>
+                                    <a href="materials/[RELEASE] L9 - Transformer++.pdf" target="_blank">📖 Slides</a>
+                                    <br>
                             </tr>
                             <tr>
                                 <td><span class="week-number">10</span></td>
