Add L9 and Final.

--- a/index.html
+++ b/index.html
@@ -683,6 +683,7 @@
                                 <td>
                                     <a href="materials/[RELEASE] L9 - Transformer++.pdf" target="_blank">📖 Slides</a>
                                     <br>
+                                    <a href="https://colab.research.google.com/drive/1UMaCbu1-4giQQbKblTkWmKHSrne7KgtP?usp=sharing" target="_blank">💻 Transformer++</a>
                             </tr>
                             <tr>
                                 <td><span class="week-number">10</span></td>
@@ -727,7 +728,7 @@
                     <ul style="margin-left: 1.5rem; line-height: 2;">
                         <li><strong>3 Homework Assignments:</strong> End-to-end ML solution with codes + a N-page report</li>
                         <li><strong>1 Midterm Exam:</strong> Closed-book, focus on concepts (single cheat sheet allowed)</li>
-                        <li><strong>1 Final LLM Project:</strong> Team of ~5, includes presentation + 10-min video + project report</li>
+                        <li><strong>1 Final Project:</strong> <a href="materials/[Final] Build, Train, and Imagine with LLMs.pdf" target="_blank"> Build, Train, and Imagine with LLMs 🤖 </a></li>
                     </ul>
                 </section>
                 
