--- a/index.html
+++ b/index.html
@@ -689,6 +689,10 @@
                             <tr>
                                 <td><span class="week-number">10</span></td>
                                 <td><strong>Pre-training & Fine-tuning Paradigm</strong></td>
+                                <td>
+                                    <a href="materials/[RELEASE] L10 - LLM Pre-training & Fine-tuning Paradigm.pdf" target="_blank">📖 Slides</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/1-moyXVY9_YJJBotc0vD_LzThyf0zDsZZ?usp=sharing" target="_blank">💻 SFT w/ GSM8K</a>
                             </tr>
                             <tr>
                                 <td><span class="week-number">11</span></td>
