--- a/index.html
+++ b/index.html
@@ -697,6 +697,10 @@
                             <tr>
                                 <td><span class="week-number">11</span></td>
                                 <td><strong>Reinforcement Learning in Large Language Models</strong></td>
+                                <td>
+                                    <a href="materials/[RELEASE] L11 - Reinforcement Learning in Large Language Models.pdf" target="_blank">📖 Slides</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/1RoNWsVum-P7zbN3SvmeV7TSng8mwCSh1?usp=sharing" target="_blank">💻 PPO in Action</a>
                             </tr>
                             <tr>
                                 <td><span class="week-number">12</span></td>
