--- a/index.html
+++ b/index.html
@@ -704,7 +704,13 @@
                             </tr>
                             <tr>
                                 <td><span class="week-number">12</span></td>
-                                <td><strong>Agentic Workflows</strong></td>
+                                <td><strong>LLM Agents: From Reasoning to Action</strong></td>
+                                <td>
+                                    <a href="materials/[RELEASE] L12 - LLM Agents_ From Reasoning to Action.pdf" target="_blank">📖 Slides</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/1SPIrl0g-xZsMzuEb1rAJlYoPqRvtpeGt?usp=sharing" target="_blank">💻 Agents w/ LangChain</a>
+                                    <br>
+                                    <a href="https://colab.research.google.com/drive/196z_Arl3waaXTD6_moHGl_-10eEW8-un?usp=sharing" target="_blank">💻 MCP</a>
                             </tr>
                             <tr>
                                 <td><span class="week-number">13</span></td>
